# xwauth

./: .gitignore  README.md  SECURITY.md  pyproject.toml  pyproject.xwauth.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: federation-interop-smoke.yml  protocol-governance.yml  protocol-unit.yml  publish.yml
benchmarks/: README.md
dist_wheel_test/: exonware_xwauth-0.0.1.0-py3-none-any.whl
docs/: GUIDE_01_USAGE.md  GUIDE_02_OPS_ROLLOUT_V1.md  GUIDE_03_HA_UPGRADE_RUNBOOK.md  GUIDE_04_REFERENCE_ARCHITECTURE_DIAGRAMS.md  GUIDE_05_MIGRATION_KEYCLOAK_SHAPED.md  GUIDE_06_MIGRATION_AUTH0_SHAPED.md  GUIDE_07_MIGRATION_SUPABASE_SHAPED.md  GUIDE_08_REFERENCE_SAAS_TEMPLATE_OUTLINE.md  GUIDE_09_OIDC_THIN_CLIENT_PATTERNS.md  GUIDE_10_SAML_ENTERPRISE_KIT.md  GUIDE_11_SCIM_HARDENING.md  GUIDE_12_FEDERATION_INTEROP_LAB.md  INDEX.md  INTEGRATOR_SECURITY_CHECKLIST.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_22_PROJECT.md  REF_23_COMPETITIVE_PARITY_WIN_PLAN.md  REF_24_OPS_PERFECT_SCORE_EXECUTION_PLAN.md  REF_25_COMPETITIVE_ADVANCE_BACKLOG.md  REF_26_INTEGRATOR_SECURITY_CHECKLIST.md  REF_27_IDP_OIDC_QUIRKS.md  REF_28_EMAIL_MAGIC_LINK_OPS.md  REF_29_INTEROP_BOUNTY_AND_FUZZING.md  REF_30_AIRGAP_DEPLOYMENT.md  REF_31_DATA_RESIDENCY.md  REF_32_MULTI_REGION_AUTH.md  REF_33_ABUSE_RESISTANCE.md  REF_33_PARTNER_INTEGRATION_MATRIX.md  REF_34_B2B_DELEGATED_ADMIN.md  REF_35_COMPLIANCE_PACK.md  REF_35_REVIEW.md  REF_36_LOGIN_UI_ACCESSIBILITY.md  REF_37_MULTI_TENANT_REFERENCE_STACK.md  REF_37_TCO_BENCHMARK_EVIDENCE.md  REF_38_PENETRATION_TEST_ENGAGEMENT.md  REF_39_EDITION_AND_SKUS.md  (+19 more)
docs/federation/: INTEROP_MATRIX.md  RUNBOOKS.md
docs/logs/: ANALYSIS_xlib_OLD_xauth_to_xwauth.md
docs/logs/benchmarks/: README.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
docs/rfc/: README.md
docs/tests/: TEST_20260209_225646_055_SUMMARY.md  TEST_20260209_230313_144_SUMMARY.md  TEST_20260209_230541_054_SUMMARY.md  TEST_20260209_230742_882_SUMMARY.md  TEST_20260209_231014_857_SUMMARY.md  TEST_20260209_231210_014_SUMMARY.md  TEST_20260209_231502_564_SUMMARY.md  TEST_20260209_231739_217_SUMMARY.md  TEST_20260209_232146_356_SUMMARY.md  TEST_20260209_232447_168_SUMMARY.md  TEST_20260209_232726_033_SUMMARY.md  TEST_20260209_233004_033_SUMMARY.md  TEST_20260319_024138_818_SUMMARY.md  TEST_20260319_062319_225_SUMMARY.md  TEST_20260322_165606_037_SUMMARY.md  TEST_20260322_170151_409_SUMMARY.md  TEST_20260322_170741_401_SUMMARY.md  TEST_20260322_171740_174_SUMMARY.md  TEST_20260322_172214_284_SUMMARY.md  TEST_20260322_172814_808_SUMMARY.md  TEST_20260401_005541_652_SUMMARY.md  TEST_20260408_150914_944_SUMMARY.md
scripts/: protocol_governance_check.py  split_legacy_mixins.py
src/exonware/: __init__.py
src/exonware/xwauth/: __init__.py  _pep562_shim.py  api_paths.py  base.py  contracts.py  defs.py  errors.py  facade.py  policy_decision.py  stack.py  version.py
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: __init__.py  conftest.py  runner.py  test_contracts_protocol_conformance.py  test_core_device_code_storage.py  test_core_installation.py  test_core_oauth2_flow.py  test_core_session_id_extraction.py  test_handlers_common_no_toplevel_xwlogin_import.py  test_import.py
tests/0.core/data/: __init__.py
tests/1.unit/: __init__.py  conftest.py  runner.py  test_policy_decision_trace.py
tests/1.unit/authorization_tests/: __init__.py  runner.py  test_abac.py  test_rbac.py  test_rebac.py
tests/1.unit/bench_tests/: test_microbench.py
tests/1.unit/config_tests/: __init__.py  runner.py  test_config.py
tests/1.unit/core_tests/: __init__.py  conftest.py  runner.py  test_connect_identity_discovery.py  test_dcr_registration_token.py  test_device_code_storage.py  test_grants.py  test_lxml_signxml_import.py  test_oauth1.py  test_oauth2.py  test_oauth2_edge_cases.py  test_oidc.py  test_oidc_hybrid_authorize.py  test_par.py  test_pkce.py  test_pkce_edge_cases.py  test_rfc_support.py  test_saml_manager.py
tests/1.unit/defs_tests/: __init__.py  runner.py  test_defs.py
tests/1.unit/errors_tests/: __init__.py  runner.py  test_errors.py
tests/1.unit/facade_tests/: __init__.py  runner.py  test_facade.py
tests/1.unit/federation_tests/: test_federation_broker.py  test_idp_quirk_contracts.py  test_idp_registry_org_isolation.py  test_jwks_cache_and_hashes.py  test_mapping_and_registry.py  test_oidc_id_token_validate.py  test_oidc_jwks_rotation_and_issuers.py
tests/1.unit/integrations_tests/: __init__.py  runner.py  test_framework_integrations.py
tests/1.unit/interop_lab_tests/: test_interop_fixture_manifest.py
tests/1.unit/jose_tests/: __init__.py  conftest.py  runner.py  test_jose_library.py
tests/1.unit/oauth_http_tests/: __init__.py  test_discovery_metadata_contract.py  test_token_endpoint_client_auth_merge.py
tests/1.unit/ops_tests/: test_abuse_resistance.py  test_admin_api_openapi_parity.py  test_airgap_deployment.py  test_b2b_delegated_admin.py  test_compliance_pack.py  test_data_residency.py  test_email_magic_link_ops.py  test_extension_model_readiness.py  test_infra_as_code_tenants.py  test_kubernetes_operator_readiness.py  test_login_ui_accessibility.py  test_multi_region_auth.py  test_oidc_self_cert_readiness.py  test_pen_test_engagement.py  test_research_program.py  test_session_device_reference_ui.py  test_tco_evidence.py
tests/1.unit/organizations_tests/: __init__.py  test_organization_manager_b2b_guards.py
tests/1.unit/pkce_tests/: __init__.py  runner.py  test_pkce_edge_cases.py
tests/1.unit/scim_tests/: test_scim_filtering.py  (+2 more)
tests/2.integration/: __init__.py  conftest.py  runner.py  test_complete_auth_flow.py  test_error_recovery.py  test_multi_provider_flow.py  test_new_features_integration.py  test_oauth2_integration.py  test_provider_integration.py  test_security_integration.py  test_user_oauth_integration.py
tests/3.advance/: __init__.py  runner.py  test_security.py
tools/: verify_auth_refactor.py
tools/migration/: __init__.py  authlib_migrator.py
(+394 files in other folders)
