# Source size (src/*): ~991.1 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwauth"
dynamic = ["version"]
description = "OAuth 2.0 / OIDC authorization-server core: tokens, sessions, federation, OAuth client helpers (login/IdP as separate HTTP services)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]
keywords = ["oauth2", "oidc", "authentication", "authorization", "exonware"]
classifiers = []
dependencies = [
  "PyJWT>=2.8.0",
  "cryptography>=41.0.0",
  "requests>=2.28.0",
  "authlib>=1.2.0",
  "oauthlib>=3.2.2",
  "webauthn>=2.0.0",
  "fastapi>=0.104.0",
  "exonware-xwsystem==0.9.0.39",
  "exonware-xwaction==0.9.0.12",
  "exonware-xwschema==0.4.0.12",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem==0.9.0.37; see lazy/full).
xw = [
  "exonware-xwaction==0.9.0.12",
  "exonware-xwdata==0.9.0.17",
  "exonware-xwentity==0.6.0.11",
  "exonware-xwjson==0.9.0.23",
  "exonware-xwmodels==0.6.0.13",
  "exonware-xwnode==0.9.0.25",
  "exonware-xwquery==0.9.0.15",
  "exonware-xwschema==0.4.0.12",
  "exonware-xwstorage==0.0.1.8",
]
lazy = [
  "exonware-xwauth[xw]==0.0.1.11",
  "exonware-xwlazy==1.0.1.81",
  "exonware-xwsystem[lazy]==0.9.0.39",
  "exonware-xwaction[xw]==0.9.0.12",
  "exonware-xwschema[xw]==0.4.0.12",
]
full = [
  "exonware-xwauth[xw]==0.0.1.11",
  "httpx>=0.27.0",
  "signxml>=4.0.0",
  "lxml>=5.0.0",
  "exonware-xwsystem[full]==0.9.0.39",
  "exonware-xwaction[xw]==0.9.0.12",
  "exonware-xwschema[xw]==0.4.0.12",
  "exonware-xwjson[xw]==0.9.0.23",
  "exonware-xwnode[xw]==0.9.0.25",
  "exonware-xwdata[xw]==0.9.0.17",
  "exonware-xwentity[xw]==0.6.0.11",
  "exonware-xwmodels[xw]==0.6.0.13",
  "exonware-xwquery[xw]==0.9.0.15",
  "exonware-xwstorage[xw]==0.0.1.8",
  "redis>=4.0.0",
]
# Do not install the unrelated PyPI distribution ``rpython`` in the same env: it shadows ``rply``
# and breaks ``lxml`` / ``signxml`` (GUIDE_53 root cause).
dev = [
  "exonware-xwauth[full]==0.0.1.11",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/exonware/xwauth"
Documentation = "https://github.com/exonware/xwauth/docs"
Repository = "https://github.com/exonware/xwauth"
Issues = "https://github.com/exonware/xwauth/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--tb=short"]

[tool.hatch.version]
path = "src/exonware/xwauth/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/docs/SECURITY.md",
  "/docs/SECURITY_ADVISORIES.md",
  "/docs/INTEGRATOR_SECURITY_CHECKLIST.md",
  "/docs/GUIDE_03_HA_UPGRADE_RUNBOOK.md",
  "/docs/GUIDE_04_REFERENCE_ARCHITECTURE_DIAGRAMS.md",
  "/docs/GUIDE_05_MIGRATION_KEYCLOAK_SHAPED.md",
  "/docs/GUIDE_06_MIGRATION_AUTH0_SHAPED.md",
  "/docs/GUIDE_07_MIGRATION_SUPABASE_SHAPED.md",
  "/docs/GUIDE_08_REFERENCE_SAAS_TEMPLATE_OUTLINE.md",
  "/docs/GUIDE_09_OIDC_THIN_CLIENT_PATTERNS.md",
  "/docs/GUIDE_10_SAML_ENTERPRISE_KIT.md",
  "/docs/GUIDE_11_SCIM_HARDENING.md",
  "/docs/GUIDE_12_FEDERATION_INTEROP_LAB.md",
  "/docs/REF_33_PARTNER_INTEGRATION_MATRIX.md",
  "/docs/REF_37_MULTI_TENANT_REFERENCE_STACK.md",
  "/docs/REF_39_EDITION_AND_SKUS.md",
  "/docs/REF_61_OPS_TELEMETRY_SCHEMA.md",
  "/docs/REF_62_OPS_SLI_REGISTRY_V1.md",
  "/docs/REF_63_AUTH_OBSERVABILITY_CONTRACT.md",
  "/docs/REF_64_CLIENT_REGISTRY_MIGRATION_MAPPING.md",
  "/docs/rfc/README.md",
  "/.references/COMPETITIVE_STACK.md",
  "/.references/ROADMAP_SCORE_20.md",
  "/.github",
]
